refactor: Use java Map#of over Guava ImmutableMap#builder (#12804)